# learn-android

./: .gitignore  AIDL_README.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/learnandroid/: ITaskCallback.aidl  ITaskManagerService.aidl
app/src/main/assets/: a.json  test.pcm  webview_test.html
app/src/main/cpp/: CMakeLists.txt  jni_func_defs.cpp  learnandroid.cpp
app/src/main/cpp/jni_demo/: CMakeLists.txt  JniDemo.cpp  JniDemo.h  defs.cpp  defs.h  jni_class_wrapper.h  jni_demo.cpp  jni_demo.h  jni_demo_config.cpp  jni_demo_config.h
app/src/main/java/com/example/learnandroid/: LottieActivity.java  MainActivity.java  MainActivity.kt  MainApplication.kt  PagActivity.java  (+4 more)
app/src/main/java/kotlinlearn/: test1.kt
app/src/main/res/drawable/: circle_shape.xml  seekbar_bg.xml  seekbar_thumb.xml
app/src/main/res/layout/: activity_aidl.xml  activity_blur.xml  activity_bottom_sheet_layout.xml  activity_camera1.xml  activity_canvas.xml  activity_circle_progress.xml  activity_image_crop.xml  activity_jni_demo.xml  activity_lottie.xml  activity_main.xml  activity_main1.xml  activity_main_rv_item.xml  activity_offscreen_render.xml  activity_pag.xml  activity_picker.xml  activity_recycler_view.xml  activity_shadowlayout.xml  activity_test.xml  activity_webview.xml  fruit_category_item.xml  fruit_content_item.xml  fruit_item.xml  shadow_dialog.xml  test.xml
app/src/main/res/values/: attrs.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: .gitignore
(+60 files in other folders)
